fixed image widths on mobile

--- a/style.css
+++ b/style.css
@@ -174,6 +174,11 @@ p.credit    {
         text-align: center;
     }
     
+img {
+    width: 100%;
+}
+    
+    
     .chatter {
         margin: 0 auto;
         margin-bottom: 30px;
